# language-helper

./: .gitignore  README.md  app.py  markov.ipynb  rnn_lstm.ipynb  setup.cfg
analysis/: cleaning_data.ipynb  markov.ipynb  test.ipynb
language_helper/: data.py  encode.py  evaluation.py  model.py  predict.py  processing.py  train.py
language_helper/markov/: data.py  model.py
language_helper/rnn/: data.py  encode.py  model.py  predict.py  train.py
tests/: test_model_markov.py  test_processor.py
