[metadata]
name = language-helper

[options]
packages = find:
include_package_data = True
install_requires =
            pandas
            torch
            torchvision
            torchaudio
            nltk
            numpy
            matplotlib
            notebook
            pytest

[bdist_wheel]
universal = False
plat-name = win-amd64
python-tag = py3